--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
+doc
+.brunch.db
+brunch.db
 *.exe
 *.exe~
 *.dll
